{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 561,
  "lineage": "7dddaec8-315b-b99d-2276-ecffbb9d57ff",
  "resources": [
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-05-31T02:33:34.416-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/firewall1",
            "log_config": [],
            "name": "firewall1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc1",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/firewall1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.landing_zone.google_compute_network.rg_operations_network",
            "module.landing_zone.google_compute_subnetwork.network-with-ip-ranges1"
          ]
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-05-31T02:33:25.161-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/base-gcp-421210/global/firewalls/firewall2",
            "log_config": [],
            "name": "firewall2",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc2",
            "priority": 1000,
            "project": "base-gcp-421210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/firewalls/firewall2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.landing_zone.google_compute_network.rg_dev_testing_network",
            "module.landing_zone.google_compute_subnetwork.network-with-ip-ranges2"
          ]
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumphost_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/images/image-1",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/zones/us-central1-a/disks/jumphostvm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "production",
              "purpose": "jump-server",
              "service": "disp"
            },
            "enable_display": false,
            "id": "projects/base-gcp-421210/zones/us-central1-a/instances/jumphostvm",
            "instance_id": "7625311388830017408",
            "label_fingerprint": "o-Qi185Xxio=",
            "labels": {
              "environment": "production",
              "purpose": "jump-server",
              "service": "disp"
            },
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "AXrj3CXdCKE=",
            "name": "jumphostvm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.141.26",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc1",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/test-subnetwork1",
                "subnetwork_project": "base-gcp-421210"
              }
            ],
            "project": "base-gcp-421210",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/zones/us-central1-a/instances/jumphostvm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jumphost",
              "ssh-access"
            ],
            "tags_fingerprint": "R4PvYsr7b6U=",
            "terraform_labels": {
              "environment": "production",
              "purpose": "jump-server",
              "service": "disp"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.landing_zone.data.google_compute_image.my_image",
            "module.landing_zone.google_compute_network.rg_operations_network",
            "module.landing_zone.google_compute_subnetwork.network-with-ip-ranges1"
          ]
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "rg_dev_testing_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/base-gcp-421210/global/networks/peering-vpc2",
            "mtu": 0,
            "name": "peering-vpc2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8287935047721559977",
            "project": "base-gcp-421210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc2"
          }
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "rg_operations_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/base-gcp-421210/global/networks/peering-vpc1",
            "mtu": 0,
            "name": "peering-vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7298677545421252520",
            "project": "base-gcp-421210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc1"
          }
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network-with-ip-ranges1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-31T02:33:18.811-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/test-subnetwork1",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "test-subnetwork1",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/test-subnetwork1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.landing_zone.google_compute_network.rg_operations_network"
          ]
        }
      ]
    },
    {
      "module": "module.landing_zone",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network-with-ip-ranges2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-31T02:33:09.906-07:00",
            "gateway_address": "192.168.10.1",
            "id": "projects/base-gcp-421210/regions/us-central1/subnetworks/test-subnetwork2",
            "ip_cidr_range": "192.168.10.0/24",
            "name": "test-subnetwork2",
            "network": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/global/networks/peering-vpc2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "base-gcp-421210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/base-gcp-421210/regions/us-central1/subnetworks/test-subnetwork2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.landing_zone.google_compute_network.rg_dev_testing_network"
          ]
        }
      ]
    }
  ]
}